[gd_scene load_steps=4 format=3 uid="uid://b45r81lj73pdb"]

[ext_resource type="Script" path="res://systems/tutorial/tutorial_window.gd" id="1_84e0u"]

[sub_resource type="Gradient" id="Gradient_8e8md"]
offsets = PackedFloat32Array(0.0974026, 0.584416, 0.876623)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6mrhi"]
gradient = SubResource("Gradient_8e8md")

[node name="TutorialWindow" type="TextureRect"]
process_mode = 1
offset_right = 500.0
offset_bottom = 600.0
texture = SubResource("GradientTexture1D_6mrhi")
script = ExtResource("1_84e0u")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.75
offset_bottom = 5.0
bbcode_enabled = true
text = "[b] [font_size={25}] [color=black]Hier k√∂nnte ihr Tutorial stehen! [/b] Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyadasd"

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.783
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.199982

[node name="NextIndicator" type="ColorRect" parent="Image"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 425.0
offset_top = 50.0
offset_right = -43.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.815686, 1)

[node name="Button" type="Button" parent="Image/NextIndicator"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="ExcludeArea" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.196078)

[connection signal="pressed" from="Image/NextIndicator/Button" to="." method="_on_button_pressed"]
